<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.example.kl.freedomfeed.AddFeeds">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:text="@string/subscribe_topics"
        android:id="@+id/subscribe"
        android:layout_below="@+id/startover"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <CheckBox
        style="@style/CheckBoxStyle"
        android:text="@string/human_rights"
        android:id="@+id/human_rights"
        android:layout_below="@id/subscribe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:onClick="addToFeed"/>

    <CheckBox
        style="@style/CheckBoxStyle"
        android:text="@string/censorship"
        android:id="@+id/censorship"
        android:layout_below="@id/human_rights"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:onClick="addToFeed"/>

    <CheckBox
        style="@style/CheckBoxStyle"
        android:text="@string/privacy"
        android:id="@+id/privacy"
        android:layout_below="@+id/censorship"
        android:layout_marginLeft="40dp"
        android:onClick="addToFeed"/>

    <CheckBox
        style="@style/CheckBoxStyle"
        android:text="@string/citizen_edu"
        android:id="@+id/citizen_edu"
        android:layout_below="@+id/privacy"
        android:layout_marginLeft="40dp"
        android:onClick="addToFeed"/>


    <CheckBox
        style="@style/CheckBoxStyle"
        android:text="@string/custom"
        android:id="@+id/custom"
        android:layout_below="@+id/citizen_edu"
        android:layout_marginLeft="40dp"
        android:onClick="showComingSoon"/>


    <Button
        style="@style/ButtonTheme"
        android:text="@string/startover"
        android:id="@+id/startover"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="goMain"/>

    <Button
        style="@style/ButtonTheme"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:onClick="goDisplayFeed"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/custom"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
